dev/test_programs/INVALID/group1/continue2.go
package test

func derp() {
	switch {
		default: continue
	}
}
